[gd_scene load_steps=28 format=2]

[ext_resource path="res://gameplay/objects/PullableObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/objects/powerups/Powerup.gd" type="Script" id=2]
[ext_resource path="res://assets/images/effects/WaterDistortion.png" type="Texture" id=3]
[ext_resource path="res://assets/images/effects/noise.png" type="Texture" id=4]
[ext_resource path="res://assets/images/powerup/barrel2_o.png" type="Texture" id=5]
[ext_resource path="res://assets/images/powerup/barrel2.png" type="Texture" id=6]
[ext_resource path="res://assets/images/powerup/barril_quebrando_particula.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/sfx/woodcrack.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/sfx/metal barrel breaks.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/sfx/hook_barrel.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/sfx/hook_barrel2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sound/sfx/pick pwup.wav" type="AudioStream" id=12]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D noise;
uniform float wave_length : hint_range(0,1);
uniform vec4 wave_color : hint_color;
uniform vec2 wave_scroll_speed;
uniform sampler2D distortion;
uniform float distortion_strength;
uniform float aa_factor;

/*Making outline images on gimp: 
	- grow shape by 40 pixel
	- paint it white
	- use filter \"gaussian blur\" with values (100,100)
	- fine adjustments with Smudge Tool if needed
*/
void fragment(){
	vec4 pixel = texture(TEXTURE, UV);
	
	if (pixel.a < 1.0 && pixel.a > 0.0){
		
		vec2 distortMod = (texture(distortion, UV).xy * 2.0 - 1.0) * distortion_strength;
		float noise_x = mod(UV.x + wave_scroll_speed.x*TIME, 1.0) + distortMod.x;
		float noise_y = mod(UV.y + wave_scroll_speed.y*TIME, 1.0) + distortMod.y;
		vec2 noiseUV = vec2(noise_x, noise_y);
		vec4 noisePixel = texture(noise, noiseUV);

		float value = (noisePixel.r + noisePixel.g + noisePixel.g)/3.0;
		
		float cutoff = 1.0 - smoothstep(1.0 - wave_length, 1.0, pixel.a);
		
		if (value > cutoff - aa_factor) {
			float alpha = smoothstep(cutoff - aa_factor, cutoff + aa_factor, value);
			COLOR = vec4(wave_color.rgb, wave_color.a * alpha);
		}
		else
			COLOR = vec4(0);
	}else
		COLOR = pixel;
		
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/wave_length = 0.495
shader_param/wave_color = Color( 0, 1, 1, 1 )
shader_param/wave_scroll_speed = Vector2( 0.02, 0 )
shader_param/distortion_strength = 0.0
shader_param/aa_factor = 0.05
shader_param/noise = ExtResource( 4 )
shader_param/distortion = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitbox:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitbox:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.6, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
angular_velocity = 90.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
damping_random = 0.5
angle = 360.0
angle_random = 1.0
color_ramp = SubResource( 8 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 35.0

[sub_resource type="AudioStreamRandomPitch" id=11]
audio_stream = ExtResource( 8 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=12]
audio_stream = ExtResource( 9 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=13]
audio_stream = ExtResource( 10 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=14]
audio_stream = ExtResource( 11 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=15]
audio_stream = ExtResource( 12 )
random_pitch = 1.2

[node name="Powerup" instance=ExtResource( 1 )]
position = Vector2( 0, 5 )
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="." index="0"]
material = SubResource( 2 )
position = Vector2( 0, 2.679 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2" index="0"]
playback_speed = 0.5
anims/spawn = SubResource( 3 )

[node name="Idle" type="AnimationPlayer" parent="Sprite2" index="1"]
autoplay = "float"
playback_speed = 0.5
anims/float = SubResource( 4 )

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, 2.67884 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]
playback_speed = 0.5
anims/spawn = SubResource( 5 )

[node name="Idle" type="AnimationPlayer" parent="Sprite" index="1"]
autoplay = "float"
playback_speed = 0.5
anims/float = SubResource( 6 )

[node name="Particles2D" type="Particles2D" parent="." index="2"]
emitting = false
amount = 12
lifetime = 1.5
one_shot = true
speed_scale = 3.0
explosiveness = 0.9
process_material = SubResource( 9 )
texture = ExtResource( 7 )

[node name="Hitbox" parent="." index="3"]
editor/display_folded = true
position = Vector2( 0, 2.67884 )
collision_layer = 32
collision_mask = 1088

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 10 )

[node name="RespawnTimer" type="Timer" parent="." index="4"]
wait_time = 2.0
one_shot = true

[node name="WoodBreakSFX" type="AudioStreamPlayer" parent="." index="6"]
stream = SubResource( 11 )
volume_db = -12.072
bus = "SFX"

[node name="MetalBreakSFX" type="AudioStreamPlayer" parent="." index="7"]
stream = SubResource( 12 )
volume_db = -7.784
bus = "SFX"

[node name="WoodHookedSFX" type="AudioStreamPlayer" parent="." index="8"]
stream = SubResource( 13 )
volume_db = -7.784
bus = "SFX"

[node name="MetalHookedSFX" type="AudioStreamPlayer" parent="." index="9"]
stream = SubResource( 14 )
volume_db = -5.951
bus = "SFX"

[node name="PowerPickup" type="AudioStreamPlayer" parent="." index="10"]
stream = SubResource( 15 )
volume_db = -8.856
bus = "SFX"
[connection signal="area_entered" from="Hitbox" to="." method="_on_PowerupHitbox_area_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="spawn"]
